--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <title>Kevin's Portfolio</title>
-    <link  href="Portfolio/styles.css" rel="stylesheet">
+    <link  href="style.css" rel="stylesheet">
     
 
   </head>
