added a git hub link and resume href(still leads to nowhere)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             </li>
               <li> <a href="style.css">Contact</a>
             </li>
+              <li> <a href="style.css">Resume</a>
+              </li>
               
               
           </ul>
@@ -57,7 +59,7 @@
   <footer>
       <ul>
           <li><a href="mailto:kg19882020@gmail.com" target="_blank">Email : Kg19882020@gmail.com</a></li>
-          <li></li>
+          <li><a href="https://github.com/SIN88" target="blank">https://github.com/SIN88</a></li>
           <li></li>
       </ul>
   </footer>
